tests/conditional_type/empty_propagation.js
type F<T> = T extends mixed ? T : empty;
declare var x: F<empty | number>;
(x: empty); // error: number ~> empty;
